added blog page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.showSideBar {
+  width: 16.666667%;
+  margin-top: 1.25rem;
+  border-radius: 0.75rem;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  box-sizing: border-box;
+  padding-left: 1.25rem/* 20px */;
+  padding-right: 1.25rem/* 20px */;
+  padding-top: 1.25rem/* 20px */;
+  padding-bottom: 1.25rem/* 20px */;
+  margin-left: 0.5rem
+}
+
+.hideSideBar {
+  width: 16.666667%;
+  margin-top: 1.25rem;
+  border-radius: 0.75rem;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  box-sizing: border-box;
+  padding-left: 1.25rem/* 20px */;
+  padding-right: 1.25rem/* 20px */;
+  padding-top: 1.25rem/* 20px */;
+  padding-bottom: 1.25rem/* 20px */;
+  margin-left: 0.5rem;
+  display: none;
+}
+
+
